--- a/package.json
+++ b/package.json
@@ -65,8 +65,10 @@
   "dependencies": {
     "@patternfly/react-core": "^3.34.0",
     "@patternfly/react-icons": "^3.9.3",
+    "@patternfly/react-table": "^2.11.1",
     "axios": "^0.19.0",
     "connected-react-router": "^6.4.0",
+    "lodash-es": "^4.17.11",
     "prop-types": "^15.7.2",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.1",
