--- a/package.json
+++ b/package.json
@@ -68,8 +68,10 @@
     "@patternfly/react-table": "^2.11.1",
     "axios": "^0.19.0",
     "connected-react-router": "^6.4.0",
+    "keycloak-js": "^6.0.1",
     "lodash-es": "^4.17.11",
     "prop-types": "^15.7.2",
+    "react-keycloak": "^6.0.4",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.1",
     "react-toastify": "^5.2.1",
