--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "react-keycloak": "^6.0.4",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.1",
+    "react-spinners": "^0.5.4",
     "react-toastify": "^5.2.1",
     "recharts": "^1.6.2",
     "redux": "^4.0.1",
