--- a/package.json
+++ b/package.json
@@ -67,12 +67,15 @@
     "@patternfly/react-icons": "^3.9.3",
     "@patternfly/react-table": "^2.11.1",
     "axios": "^0.19.0",
-    "connected-react-router": "^6.4.0",
+    "connected-react-router": "^6.5.2",
+    "dotenv-webpack": "^1.7.0",
+    "history": "^4.9.0",
     "keycloak-js": "^6.0.1",
-    "lodash-es": "^4.17.11",
+    "lodash-es": "^4.17.13",
     "prop-types": "^15.7.2",
     "react-keycloak": "^6.0.4",
     "react-redux": "^7.0.3",
+    "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-spinners": "^0.5.4",
     "react-toastify": "^5.2.1",
