--- a/.env.defaults
+++ b/.env.defaults
@@ -1,4 +1,4 @@
 REACT_APP_VERSION=$npm_package_version
 
 REACT_APP_RHSSO_REALM="kie-realm"
-REACT_APP_RHSSO_CLIENT="reactapp"
+REACT_APP_RHSSO_CLIENT="hiring-internal"
