--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@patternfly/react-icons": "^3.9.3",
     "@patternfly/react-table": "^2.11.1",
     "axios": "^0.19.0",
+    "axios-react-inlinesvg": "^1.0.0",
     "connected-react-router": "^6.5.2",
     "history": "^4.9.0",
     "keycloak-js": "^6.0.1",
